Album: Fix shift on small screens (#6276)

--- a/src/components/middle/message/_message-content.scss
+++ b/src/components/middle/message/_message-content.scss
@@ -595,15 +595,6 @@
     }
   }
 
-  .no-media-corners {
-    --border-top-left-radius: 0;
-    --border-top-right-radius: 0;
-
-    .Album {
-      margin-inline: auto !important;
-    }
-  }
-
   &.custom-shape.is-via-bot {
     font-size: inherit !important;
 
